[package]
version = "0.1.0"
name = "seed_rs_org"
repository = "https://github.com/seed-rs/seed-rs.org"
authors = ["Martin Kavík <martin@kavik.cz>", "David O'Connor <david.alan.oconnor@gmail.com>"]
description = "Rust framework for creating fast and reliable web apps"
categories = ["wasm", "rust", "tailwindcss", "seed", "docs", "website"]
license = "MIT"
readme = "./README.md"
edition = "2018"

build = "build.rs"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
pulldown-cmark = "^0.6.1"

[dev-dependencies]
wasm-bindgen-test = "^0.3.8"

[dependencies]
wasm-bindgen = "^0.2.58"
serde = { version = "^1.0.104", features = ['derive'] }
serde_json = "^1.0.45"
#seed = "0.6.0"
seed = { git = "https://github.com/seed-rs/seed.git" }

[dependencies.web-sys]
version = "^0.3.35"
features = [
  "ScrollToOptions",
  "Navigator",
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
