[package]
version = "0.1.0"
name = "seed_rs_org"
repository = "https://github.com/seed-rs/seed-rs.org"
authors = ["Martin Kavík <martin@kavik.cz>", "David O'Connor <david.alan.oconnor@gmail.com>"]
description = "Rust framework for creating fast and reliable web apps"
categories = ["wasm", "rust", "tailwindcss", "seed", "docs", "website"]
license = "MIT"
readme = "./README.md"
edition = "2018"

build = "build.rs"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
pulldown-cmark = "0.7.1"
uuid = "0.8.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.12"

[dependencies]
wasm-bindgen = "0.2.62"
serde = { version = "1.0.106", features = ['derive'] }
serde_json = "1.0.52"
#seed = "0.6.0"
seed = { git = "https://github.com/seed-rs/seed.git" }

[dependencies.web-sys]
version = "0.3.39"
features = [
  "ScrollToOptions",
  "Navigator",
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
