[package]
version = "0.1.0"
name = "seed_rs_org"
repository = "https://github.com/seed-rs/seed-rs.org"
authors = ["Martin Kavík <martin@kavik.cz>", "David O'Connor <david.alan.oconnor@gmail.com>"]
description = "Rust framework for creating fast and reliable web apps"
categories = ["wasm", "rust", "tailwindcss", "seed", "docs", "website"]
license = "MIT"
readme = "./README.md"
edition = "2021"

build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo-storage = "0.2.2"
seed = { version = "0.10.0", features = ["routing"] }
serde = { version = "1.0.153", features = ['derive'] }
serde_json = "1.0.94"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3.61"
features = [
  "ScrollToOptions",
  "Navigator",
]

[build-dependencies]
pulldown-cmark = "0.9.2"
uuid = { version = "1.3.0", features = ["v4"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"


[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
